--- a/rf-simulator-api/default-config.json
+++ b/rf-simulator-api/default-config.json
@@ -1,44 +1,84 @@
 {
-    "modules": [
-        {
-            "id": "1",
-            "name": "Amplifier",
-            "config": {
-                "temperature": 36.6,
-                "power": 50.97
-            }
-        },
-        {
-            "id": "2",
-            "name": "Power Supply",
-            "config": {
-                "temperature": 59.23,
-                "power": 33
-            }
-        },
-        {
-            "id": "3",
-            "name": "Antenna",
-            "config": {
-                "temperature": 45.12,
-                "power": 12.5
-            }
-        },
-        {
-            "id": "4",
-            "name": "RF Switch",
-            "config": {
-                "temperature": 22.5,
-                "power": 0.5
-            }
-        },
-        {
-            "id": "5",
-            "name": "RF Cable",
-            "config": {
-                "temperature": 30.0,
-                "power": 0.1
-            }
-        }
-    ]
+  "modules": [
+    {
+      "id": "1",
+      "name": "Amplifier",
+      "config": {
+        "temperature": 36.6,
+        "power": 50.97
+      }
+    },
+    {
+      "id": "2",
+      "name": "Power Supply",
+      "config": {
+        "temperature": 59.23,
+        "power": 33
+      }
+    },
+    {
+      "id": "3",
+      "name": "Antenna",
+      "config": {
+        "temperature": 45.12,
+        "power": 12.5
+      }
+    },
+    {
+      "id": "4",
+      "name": "RF Switch",
+      "config": {
+        "temperature": 22.5,
+        "power": 0.5
+      }
+    },
+    {
+      "id": "5",
+      "name": "RF Cable",
+      "config": {
+        "temperature": 30,
+        "power": 0.1
+      }
+    },
+    {
+      "id": "6",
+      "name": "RF Load",
+      "config": {
+        "temperature": 25,
+        "power": 0.01
+      }
+    },
+    {
+      "id": "7",
+      "name": "RF Detector",
+      "config": {
+        "temperature": 20,
+        "power": 0.001
+      }
+    },
+    {
+      "id": "8",
+      "name": "RF Mixer",
+      "config": {
+        "temperature": 28,
+        "power": 0.2
+      }
+    },
+    {
+      "id": "9",
+      "name": "RF Filter",
+      "config": {
+        "temperature": 35,
+        "power": 0.05
+      }
+    },
+    {
+      "id": "10",
+      "name": "RF Attenuator",
+      "config": {
+        "temperature": 40,
+        "power": 0.1
+      }
+    }
+  ]
 }
